<resources>
    <string name="app_name">Origitech</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_find_location">Action Dound</string>
     <string name="long_text">Android 5.0 Lollipop was one of the most significant Android releases ever,
        in no small part due to the introduction of material design,
        a new design language that refreshed the entire Android experience
    </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="backup">Backup</string>
    <string name="usage">How To Use</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="phone_number">Enter Phone number</string>
    <string name="get_started">Get Started</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="protected_brands">Protected Brands</string>
    <string name="claims">Claims</string>
    <string name="dashboard">Dashboard</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">Close</string>
    <string name="uploadtoServer">Upload</string>
    <string name="verify">Verify</string>
    <string name="verifytext">Enter Code to verify</string>



    <string name="verify_btn">Submit</string>

    <string name="receipts">Receipts</string>

    <string name="items"></string>
    <string name="home">Home</string>
    <string name="warranties">Warranties</string>

    <string name="blacklisted">Blacklisted</string>
    <string name="investigation">Investigation</string>

    <string name="profile_name">enter your name</string>
    <string name="product_name">Product name</string>
    <string name="dealer_name">Dealer name</string>
    <string name="location">Location</string>
    <string name="dealer_contact">Dealers contact</string>
    <string name="report">Report</string>
    <string name="or">or take a photo</string>
    <string name="get_touch">Will Be In Touch</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="send_message">Send Message</string>
    <string name="reason">Tell us something about the research</string>
    <string name="date">Date you need it</string>



    <string name="email">someone@host.com</string>
    <string name="firstname">Enter First Name</string>
    <string name="secondname">Enter Second Name</string>
    <string name="model">Product model</string>
    <string name="blacklist">Blacklist</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update profile</string>

    <string name="fname">firstname</string>
    <string name="sname">secondname</string>
    <string name="phonenumber">Phonenumber</string>
    <string name="change_profile_picture">Change your profile picture</string>

    <string name="imageview"></string>
    <string name="company_name">Company Name</string>
    <string name="filename">Filename</string>
    <string name="time">Time</string>
    <string name="body">Message Here</string>

    <string name="product_model">Product Model</string>
    <string name="product_type">Product Type</string>

    <string name="product_serial">Product Serial</string>
    <string name="code">Code</string>
    <string name="backup_list">Backup List</string>
    <string name="password">Enter Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="shop">Shop Name</string>


    <string-array name="backuptype">
        <item>Select backup type</item>
        <item>Warranty</item>
        <item >Receipt</item>
    </string-array>


    <string-array name="reporttype">
        <item >Select report type</item>
        <item>Fake Product</item>
        <item >Fake Sticker</item>
    </string-array>

</resources>


