<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvtcompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/PrimaryColor"
            android:text="@string/company_name"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/txtproductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tvtcompanyName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtmodel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_model"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:layout_above="@+id/txttype"
            android:layout_alignRight="@+id/btnuniquecode"
            android:layout_alignEnd="@+id/btnuniquecode" />

        <TextView
            android:id="@+id/txtserial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_serial"
            android:textSize="15sp"
            android:layout_alignBaseline="@+id/txttype"
            android:layout_alignBottom="@+id/txttype"
            android:layout_alignRight="@+id/txtmodel"
            android:layout_alignEnd="@+id/txtmodel"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/txttype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/txtproductName"
            android:layout_alignLeft="@+id/txtproductName"
            android:layout_alignStart="@+id/txtproductName"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtdate"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:background="@color/bkg_card"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/txtserial"
            android:layout_alignLeft="@+id/txtmodel"
            android:layout_alignStart="@+id/txtmodel" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/code"
            android:textSize="15sp"
            android:background="@color/green"
            android:id="@+id/btnuniquecode"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="51dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/txtproductName" />

    </RelativeLayout>

</android.support.v7.widget.CardView>