<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/reporttype"
        android:layout_marginTop="60dp"
        android:id="@+id/spinreporttype"
        android:layout_margin="@dimen/layout_margin"


        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:id="@+id/edtproduct_name"
        android:hint="@string/product_name"
        android:textColor="@color/text"
        android:layout_marginTop="60dp"
        android:layout_margin="@dimen/layout_margin"
        />


    <EditText
        android:layout_width="match_parent"
        android:textColor="@color/text"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/model"
        android:id="@+id/edtmodel"
        android:layout_margin="@dimen/layout_margin"

       />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/edtdealer_name"
        android:layout_marginTop="60dp"
        android:layout_height="@dimen/edit_text_height"
        android:textColor="@color/text"
        android:layout_margin="@dimen/layout_margin"
        android:hint="@string/dealer_name"
        android:layout_below="@+id/product_name"
        />


    <EditText
        android:layout_width="match_parent"
        android:id="@+id/edtshop"
        android:layout_marginTop="60dp"
        android:layout_height="@dimen/edit_text_height"
        android:textColor="@color/text"
        android:layout_margin="@dimen/layout_margin"
        android:hint="@string/shop"

        />






    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imagreport"
        android:src="@drawable/ic_photo_camera"
        android:layout_above="@+id/button4"
        android:layout_gravity="center_horizontal" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnreport"
        android:layout_margin="@dimen/layout_margin"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="64dp"
       />



    </LinearLayout>
</ScrollView>
</LinearLayout>