<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organisation_name"
        android:textColor="@color/text"
        android:id="@+id/org_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="58dp"
          android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/reason"
        android:layout_marginLeft="10dp"
        android:text="@string/reason"
        android:textColor="@color/text"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/org_name"
        android:layout_alignLeft="@+id/org_name"
        android:layout_alignStart="@+id/org_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/textView2"
        android:textColor="@color/PrimaryColor"
        android:layout_below="@+id/reason"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:background="@drawable/rounded_button"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="@dimen/date"
        android:id="@+id/datePicker"

        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>