<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >



        <ImageView
            android:id="@+id/imagedownload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_file_download_black_48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtbackuptype"
            android:text="@string/backup"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/align_left"
            android:layout_toRightOf="@+id/imagedownload"
            android:layout_alignParentTop="true"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtfilename"
            android:textColor="@color/black"
            android:text="@string/filename"
            android:textSize="10sp"
            android:layout_alignBottom="@+id/imagedownload"
            android:layout_alignLeft="@+id/txtbackuptype"
            android:layout_alignStart="@+id/txtbackuptype" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtdate"
            android:text="@string/time"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/txtfilename"
            android:layout_alignLeft="@+id/txtfilename"
            android:layout_alignStart="@+id/txtfilename" />


    </RelativeLayout>

</android.support.v7.widget.CardView>