<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="root.com.origitech"
    android:weightSum="4"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_height"
                android:layout_weight="2">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgeavatar"

                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_profile_picture"
                    android:paddingTop="30dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="40dp"
                    android:textSize="15dp"


                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/imgeavatar"
                    android:layout_toEndOf="@+id/imgeavatar" />



            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


        <ViewSwitcher
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switcher_firstname">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text=""
                    android:drawableLeft="@drawable/account"
                    android:drawableRight="@drawable/ic_create_black_18dp"
                    android:textColor="@color/PrimaryColor"
                    android:padding="20dp"

                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:paddingBottom="8dp"
                    android:background="@drawable/rounder_corners"
                    android:paddingLeft="16dp"
                    android:textAlignment="center"
                    android:textSize="18sp"

                    android:id="@+id/tvtfirstname"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:id="@+id/editfristname"
                    android:inputType="textPersonName"
                    android:textColor="@color/PrimaryColor"
                    />

            </ViewSwitcher>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/fname"
                    android:padding="5dp"
                    android:layout_marginLeft="50dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"

                    android:textSize="18sp"
                    android:id="@+id/tvtplaceholder" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ViewSwitcher
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switcher_secondname">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:drawableLeft="@drawable/account"
                    android:drawableRight="@drawable/ic_create_black_18dp"
                    android:textColor="@color/PrimaryColor"
                    android:padding="20dp"

                    android:layout_marginTop="10dp"

                    android:paddingBottom="8dp"
                    android:background="@drawable/rounder_corners"
                    android:paddingLeft="16dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:id="@+id/tvtsecondnamename"
                   />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:id="@+id/editsecondnamename"
                        android:inputType="textPersonName"
                        android:textColor="@color/PrimaryColor"
                        />

                      </ViewSwitcher>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/sname"
                    android:padding="5dp"
                    android:layout_marginLeft="50dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"

                    android:textSize="18sp"
                    android:id="@+id/secondnameplaceholder" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text=""
                    android:drawableLeft="@drawable/ic_call_black_18dp"
                    android:drawableRight="@drawable/ic_create_black_18dp"
                    android:textColor="@color/PrimaryColor"
                    android:padding="20dp"

                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:paddingBottom="8dp"
                    android:background="@drawable/rounder_corners"
                    android:paddingLeft="16dp"
                    android:textAlignment="center"
                    android:textSize="18sp"

                    android:id="@+id/editphonenumber"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/phonenumber"
                    android:padding="5dp"
                    android:layout_marginLeft="50dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"

                    android:textSize="18sp"
                    android:id="@+id/phonenumberplaceholder" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ViewSwitcher
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switcher_email">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text=""
                    android:drawableLeft="@drawable/email"
                    android:drawableRight="@drawable/ic_create_black_18dp"
                    android:textColor="@color/PrimaryColor"
                    android:padding="20dp"

                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:paddingBottom="8dp"

                    android:paddingLeft="16dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:id="@+id/tvtemail"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:id="@+id/editemail"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/PrimaryColor"
                        />
                </ViewSwitcher>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/phonenumber"
                    android:padding="5dp"
                    android:layout_marginLeft="50dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"

                    android:textSize="18sp"
                    android:id="@+id/emailplaceholder" />
            </LinearLayout>






            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_profile"

                android:id="@+id/btnCreate"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.48" />

        </LinearLayout>
    </ScrollView>
</LinearLayout >